Java 21
コンパイルの設定をJava 21に変更した。
非推奨になったコードを修正した。