@@ -62,6 +62,7 @@
                 <configuration>
                     <compilerArgs>
                         <arg>-parameters</arg>
+                        <arg>-proc:full</arg>
                     </compilerArgs>
                 </configuration>
             </plugin>
@@ -112,7 +113,7 @@
                 <version>3.1.2</version>
                 <configuration>
                     <reuseForks>false</reuseForks>
-                    <argLine>${argLine} -Dapp_home=${project.build.directory}</argLine>
+                    <argLine>${argLine} -XX:+EnableDynamicAgentLoading -Dapp_home=${project.build.directory}</argLine>
                 </configuration>
             </plugin>
             <plugin>
@@ -486,8 +487,8 @@
     </dependencies>
 
     <properties>
-        <maven.compiler.source>17</maven.compiler.source>
-        <maven.compiler.target>17</maven.compiler.target>
+        <maven.compiler.source>21</maven.compiler.source>
+        <maven.compiler.target>21</maven.compiler.target>
 
         <jdbc.groupId>org.mariadb.jdbc</jdbc.groupId>
         <jdbc.artifactId>mariadb-java-client</jdbc.artifactId>
